<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.chat.GroupInfoActivity">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/appBarLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:background="@color/colorPrimaryDark"
                app:popupTheme="@style/ThemeOverlay.AppCompat.Dark.ActionBar" />

            </com.google.android.material.appbar.AppBarLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:background="@android:color/white"
                android:layout_height="300dp">

                <ImageView
                    android:id="@+id/group_image"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:scaleType="fitXY"
                    android:adjustViewBounds="true" />

                <TextView
                    android:id="@+id/group_description"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="#3E000000"
                    android:text="@string/group_description"
                    android:layout_above="@+id/createdBy"
                    android:textColor="@android:color/white"
                    android:padding="5dp" />

                <TextView
                    android:id="@+id/createdBy"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="#3E000000"
                    android:text="Created by username, on dd/mm/yyy"
                    android:layout_alignParentBottom="true"
                    android:textColor="@android:color/white"
                    android:padding="5dp" />

            </RelativeLayout>


            <TextView
                android:id="@+id/edit_group"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/edit_group"
                android:textColor="@android:color/black"
                android:background="@android:color/white"
                android:drawableStart="@drawable/ic_edit"
                android:drawableTint="@android:color/black"
                android:drawablePadding="10dp"
                android:padding="5dp" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/colorAccent" />

            <TextView
                android:id="@+id/add_participant"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/add_participant"
                android:textColor="@android:color/black"
                android:background="@android:color/white"
                android:drawableStart="@drawable/ic_add_user"
                android:drawableTint="@android:color/black"
                android:drawablePadding="10dp"
                android:padding="5dp" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/colorAccent" />

            <TextView
                android:id="@+id/leave_group"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/leave_group"
                android:textColor="@android:color/black"
                android:background="@android:color/white"
                android:drawableStart="@drawable/ic_delete"
                android:drawableTint="@android:color/black"
                android:drawablePadding="10dp"
                android:padding="5dp" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/colorAccent" />

            <TextView
                android:id="@+id/number_participants"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/participants_n"
                android:textColor="@android:color/black"
                android:background="@android:color/white"
                android:drawableStart="@drawable/ic_group_icon"
                android:drawableTint="@android:color/black"
                android:drawablePadding="10dp"
                android:padding="5dp" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/colorAccent" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recyclerView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/white"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                tools:listitem="@layout/friends_row" />


    </LinearLayout>

</androidx.core.widget.NestedScrollView>
